# Clowns-From-Mars-Master-Control-Panel

./: .gitignore  CMakeLists.txt  Product Overview  README.md
.github/workflows/: windows-installer.yml
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
Source/dsp/: CompressorModule.h  DriftModel.h  DspCommon.h  EqualizerModule.h  LinearPhaseEq.h  LoudnessMeter.h  Metering.h  StereoModule.h  TapeModule.h  TubeStage.h
Source/gui/: ControlPanelLookAndFeel.cpp  ControlPanelLookAndFeel.h  GainReductionMeter.h  LevelMeter.cpp  LevelMeter.h  RotarySlider.cpp  RotarySlider.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  Theme.h  TurboLookAndFeel.cpp  TurboLookAndFeel.h
Tools/: verify_main.cpp
installer/: master-control-panel.iss
